# packaging_system

./: .gitmodules  Dockerfile  README.md  docker-compose.yaml
cmd/: docker_cmd.txt  wsl_usb_cmd.txt
docker/: build_cmd.txt  entrypoint.sh
script/: README.md  activate_vxcan.bash  activate_vxcan_dev.bash  vxcan_interface.bash
src/packaging_machine_comm/: CMakeLists.txt  README.md  package.xml
src/packaging_machine_comm/config/17w_lifecycle/: C20-120L2C_V1.02.eds  bus.yml
src/packaging_machine_comm/config/maishuo_lifecycle/: packaging_machine.eds
src/packaging_machine_comm/launch/: 17w_lifecycle_setup.launch.py  futian_lifecycle_setup.launch.py  maishuo_lifecycle_setup.launch.py
src/packaging_machine_comm/launch_tests/: test_proxy_driver.py  test_proxy_lifecycle_driver.py
src/packaging_machine_control_system/: CMakeLists.txt  package.xml
src/packaging_machine_control_system/include/packaging_machine_control_system/: manager.hpp  packaging_machine_action_client.hpp  packaging_machine_node.hpp
src/packaging_machine_control_system/include/printer/: config.h  libusbxx.hpp  printer.h
src/packaging_machine_control_system/launch/: control_system.launch.py  control_system_sim.launch.py
src/packaging_machine_control_system/src/: manager.cpp  packaging_machine_action_client.cpp  packaging_machine_node.cpp  packaging_order_client.cpp
src/packaging_machine_control_system/src/printer/: printer.cpp
src/packaging_system/: CMakeLists.txt  package.xml
src/packaging_system/config/17w/: DS301_profile.eds  bus.yml  packaging_machine.eds
src/packaging_system/config/17w_lifecycle/: bus.yml  packaging_machine.eds
src/packaging_system/launch/: 17w_lifecycle_setup.launch.py  17w_setup.launch.py
src/packaging_system/launch_tests/: test_cia402_driver.py  test_robot_control.py
